--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,11 @@ fieldset {
   display: block;
   margin: 0 auto;
   padding: 0 auto;
+  border: 5px;
 }
 
 label {
+  border: 5px:
   display: block;
+  margin-top: 20px;
 }
